k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  labels:
    app: python-app
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - port: 8888
      targetPort: 5000
